--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="images/kimm.png" class="profile-image">
                 <h1 class="fullname">Kim</h1>
                 <p class="job">Partner Contributor</p>
-                <p class="about-me">"I am here to shear my presentation regarding <span>Communication in the work place </span>. Please feel free to download this file"</p>
+                <p class="about-me">"I am here to share my presentation regarding <h3>Communication in the work place </h3>. Please feel free to download this file"</p>
                 <!-- <a href="download/Abi Assignment.docx" download></a> -->
                 <button type="button"><a href="https://drive.google.com/drive/folders/1kEB02yDPNeqVHUMV0Aq7DF-EVPQW5gO3?usp=sharing " download style="color: aliceblue;">Download</a></button>
                 <ul class="social-icons">
@@ -35,7 +35,7 @@
                 <img src="images/mam.jpg" class="profile-image">
                 <h1 class="fullname">Mamadu Jalloh</h1>
                 <p class="job">IT Assistant</p>
-                <p class="about-me">"Please feel free to download the Rappid Typing softwear. This softwear will helps to improve your typing skills for a better productivity."</p>
+                <p class="about-me">"Please feel free to download the Rappid Typing software. This softwear will help to improve your typing skills for a better productivity."</p>
                 <button type="button"><a href="https://drive.google.com/drive/folders/1VlyI_OWRvCoJh6qHHjZGzuBVtIYtAzQy?usp=sharing " download style="color: aliceblue;">Download</a></button>
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -49,7 +49,7 @@
                 <img src="images/josh.jpg" class="profile-image">
                 <h1 class="fullname">Joshua Sama Charley</h1>
                 <p class="job">Tech Teaching</p>
-                <p class="about-me">"Hi! Don't worry i am here to shear with you your tasks, each group must make sure to fully complete each tasks for a better understanding"</p>
+                <p class="about-me">"Hi! Don't worry i am here to share with you your tasks, each group must make sure to fully complete each tasks for a better understanding"</p>
                 <button type="button"><a href="download/Activity Implementation One1.docx " download style="color: aliceblue;">Download</a></button>
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -64,7 +64,7 @@
                     <img src="images/charley.jpg" class="profile-image">
                     <h1 class="fullname">Joshua Sama Charley</h1>
                     <p class="job">Tech Teaching</p>
-                    <p class="about-me">"Hi! Don't worry i am here to shear with you your tasks but <h3>Activity 2 is coming soon</h3>"</p>
+                    <p class="about-me">"Hi! Don't worry i am here to share with you your tasks but <h3>Activity 2 is coming soon</h3>"</p>
                     <button type="button"><a href="#" download style="color: aliceblue;">Download</a></button>
                     <ul class="social-icons">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
